# design_pattern_in_modern_cpp

./: CMakeLists.txt  README.md
chpt10_facade/: facade_summary.cc
chpt11_flyweight/: flyweight_summary.cc
chpt12_proxy/: proxy_example.cc  proxy_summary.cc
chpt13_chain_of_responsibility/: CMakeLists.txt  cor_example.cc  cor_summary.cc
chpt14_command/: command_example.cc  command_summary.cc
chpt15_interpreter/: interpreter_example.cc
chpt16_iterator/: iterator_example.cc  iterator_summary.cc
chpt17_mediator/: mediator_example.cc  mediator_summary.cc
chpt18_memento/: memento_summary_nested.cc
chpt19_null_object/: null_object_example.cc
chpt1_intro/: CMakeLists.txt  Dip.cc  Isp.cc  Lsp.cc  Ocp.cc  README.md  Srp.cc  crtp.cc  mixin.cc  property.cc  static_polymorphism.cc  static_polymorphism_concept.cc
chpt20_observer/: observer_example.cc  observer_summary.cc
chpt21_state/: state_summary.cc
chpt22_strategy/: strategy_example.cc  strategy_summary.cc
chpt23_template_method/: template_method_example.cc  template_method_summary.cc
chpt24_visitor/: crtp_visitor.cc  double_dispatch.cc  variant_visitor.cc  visitor_summary.cc
chpt2_builder/: builder_summary.cc  composite_builder.cc  composite_builder.h  groovy_style_builder.cc  html_element.h  simple_builder.cc
chpt3_factory/: abstract_factory_example.cc  abstract_factory_summary.cc  factory_example.cc  factory_summary.cc
chpt4_prototype/: prototype_example.cc  prototype_summary.cc
chpt5_singleton/: classic_singleton.cc
chpt6_adapter/: adapter_summary.cc
chpt7_bridge/: Person.cc  Person.h  (+3 more)
(+3 files in other folders)
